--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,2 +1,12 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
+.site-title {
+    @include relative-font-size(1.625);
+    font-weight: 400;
+    font-family: 'Great Vibes', cursive;
+    margin-bottom: 0;
+    float: left;
+    @include media-query($on-palm) {
+      padding-right: 45px;
+    }
+}
